--- a/String-Literals.html
+++ b/String-Literals.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Excercise</title>
+        <title>String Literals using Backticks</title>
 
     </head>
     <script>
